safewalk2-platform/existing-vnet/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "SafewalkVHDImageURL": {
            "type": "string",
            "metadata": {
                "description": "Set to the URL of the Safewalk VHD image you have uploaded earlier."
            }
        },
        "SafewalkGatewayVHDImageURL": {
            "type": "string",
            "metadata": {
                "description": "Set to the URL of the Safewalk Gateway VHD image you have uploaded earlier."
            }
        },
        "VnetName": {
            "type": "string",
            "metadata": {
                "description": "A name for the VNet that will be used."
            }
        },
        "vNetResourceGroup":{
            "type": "string",
            "metadata": {
                "description": "A name for the resource group of the VNet that will be used."
            }
        },
        "subnetLANName": {
            "type": "string",
            "defaultValue": "SafewalkSubNet",
            "metadata": {
                "description": "A name for a subnet that will be used to serve the Safewalk server."
            }
        },
        "subnetDMZName": {
            "type": "string",
            "defaultValue": "SafewalkSubNet-DMZ",
            "metadata": {
                "description": "A name for Internet facing subnet that will be used to serve the Safewalk Gateway."
            }
        },
        "subnetLANAddressSpace": {
            "type": "string",
            "metadata": {
                "description": "The address space of the specified LAN subnet."
            }
        },
        "SafewalkGatewayIP": {
            "type": "string",
            "metadata": {
                "description": "Set to the address that will be assigned to the Safewalk Gateway within the DMZ subnet (e.g. 10.1.2.4)."
            }
        },
        "numberOfSafewalkInstances": {
            "type": "int",
            "defaultValue": 2,
            "allowedValues": [
                1,
                2,
                3,
                4
                ],
            "metadata": {
                "description": "If it's greater than 1, a multimaster cluster of Safewalk nodes will be created and the deployment procedure will take care of configuring the topology between the nodes. To install a single Safewalk node set this parameter to 1."
            }
        },
        "safewalkIPComponent": {
            "type": "int",
            "metadata": {
                "description": "Last component of the IP that will be assigned to the first Safewalk node. Example: set to 30 if the Safewalk IP is ###.###.###.30"
            }
        },
        "vmUsername": {
            "type": "string",		
            "metadata": {
                "description": "A username for a privileged user that will be created inside the Safewalk servers and Safewalk Gateway operating system."
            }
        },		
        "vmPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password for the corresponding privileged user account for the Safewalk servers and Safewalk Gateway operating system."
            }
        },
		"SafewalkServerVmSize": {
            "type": "string",
            "defaultValue": "Standard_A1",
            "metadata": {
                "description": "The azure VM size that will be used for the Safewalk server. The same size will be assigned to all the Safewalk servers that will participate in the cluster."
            }
        },
        "SafewalkGatewayVmSize": {
            "type": "string",
            "defaultValue": "Standard_A1",
            "metadata": {
                "description": "The azure VM size that will be used for the Safewalk Gateway."
            }
        },
        "SafewalkServerRootPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password to set for the root account of the Safewalk server. The same root password will be set to all the Safewalk servers that will participate in the cluster."
            }
        },
        "SafewalkServerAdminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password to set for the Safewalk server admin account."
            }
        },
        "SafewalkGatewayRootPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password to set for the root account of the Safewalk Gateway."
            }
        },
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated."
            },
            "defaultValue": "https://raw.githubusercontent.com/altipeak/azure-quickstart-templates/safewalk-platform/safewalk2-platform/"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated."
            },
            "defaultValue": ""
        }
    },
    "variables": {
        "vmPrefix": "swk",
        "vnetID": "[resourceId(parameters('vNetResourceGroup'), 'Microsoft.Network/virtualNetworks', parameters('vNetName'))]",
        "subnetRef": "[concat(variables('vnetID'), '/subnets/', parameters('subnetLANName'))]",
        "subnetLANAddressSplit": "[split(parameters('subnetLANAddressSpace'), '.')]",
        "subnetLANAddressPrefix": "[concat(variables('subnetLANAddressSplit')[0], '.', variables('subnetLANAddressSplit')[1], '.', variables('subnetLANAddressSplit')[2], '.')]",
        "firstLastIPComponent": "[parameters('safewalkIPComponent')]",
        "firstSafewalkServerIP": "[concat(variables('subnetLANAddressPrefix'), variables('firstLastIPComponent') )]",
        "lastSafewalkServerIP": "[concat(variables('subnetLANAddressPrefix'), add(variables('firstLastIPComponent'), parameters('numberOfSafewalkInstances')))]",
        "subnetDMZRef": "[concat(variables('vnetID'), '/subnets/', parameters('subnetDMZName'))]",
        "sizeOfOSDiskInGBSafewalk" :  "63",
        "sizeOfDataDiskInGBSafewalk" :  "127",
	    "sizeOfDiskInGBGateway" :  "31",
        "location": "[resourceGroup().location]",
        "gatewayPublicIPName": "[concat(variables('vmPrefix'), '-gateway-public-IP')]",
        "ScriptFolder": "scripts",
        "updateip_templateUri": "[concat(parameters('_artifactsLocation'), '/nested/update-nic.json', parameters('_artifactsLocationSasToken'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/images",
            "name": "[concat(variables('vmPrefix'),'-server-osImage')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "osState": "Generalized",
                        "blobUri": "[parameters('SafewalkVHDImageURL')]",
                        "caching": "ReadWrite",
                        "storageAccountType": "Standard_LRS",
                        "diskSizeGB": "[variables('sizeOfOSDiskInGBSafewalk')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/images",
            "name": "[concat(variables('vmPrefix'),'-gateway-osImage')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "osState": "Generalized",
                        "blobUri": "[parameters('SafewalkGatewayVHDImageURL')]",
                        "caching": "ReadWrite",
                        "storageAccountType": "Standard_LRS",
                        "diskSizeGB": "[variables('sizeOfDiskInGBGateway')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(variables('vmPrefix'), '-DMZ-NSG')]",
            "apiVersion": "2017-04-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "NTP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 700,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RADIUS_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "1812",
                            "destinationPortRange": "1812",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 800,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SNMP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "161",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 900,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "NTP_Outbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "8445_authapi_Outbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "8446_regapi_Outbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8446",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 510,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "9445_userportal_Outbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 520,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "RADIUS_Outbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "1812",
                            "destinationPortRange": "1812",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Deny_Outbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(variables('vmPrefix'), '-LAN-NSG')]",
            "apiVersion": "2017-04-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "NTP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "PSQL_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5432",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 700,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "8443_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 710,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "8445_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 720,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "8446_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8446",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 730,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "9445_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 740,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RADIUS_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "1812",
                            "destinationPortRange": "1812",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 800,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SNMP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "161",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 900,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Deny_Internet_Inbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('vmPrefix'), '-gateway-NIC')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[variables('gatewayPublicIPName')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('SafewalkGatewayIP')]",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmPrefix'), '-gateway-public-IP'))]"
                            },
                            "subnet": {
                                "id": "[variables('subnetDMZRef')]"
                            }
                        }
                    }
                ],
                "enableIPForwarding": true
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('vmPrefix'), '-server-', copyIndex(), '-NIC')]",
            "location": "[variables('location')]",
            "dependsOn": [
                
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig2",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[concat(variables('subnetLANAddressPrefix'), copyIndex(variables('firstLastIPComponent')) )]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ]
            },
            "copy": {
                "name": "server-net-interfaces",
                "count": "[parameters('numberOfSafewalkInstances')]",
                "mode": "serial",
                "batchSize": 1
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('gatewayPublicIPName')]",
            "location": "[variables('location')]",
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(variables('vmPrefix'), '-gateway')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('vmPrefix'), '-gateway-NIC')]",
                "[concat('Microsoft.Compute/images/', variables('vmPrefix'), '-gateway-osImage')]",
                "[concat('Microsoft.Compute/availabilitySets/', variables('vmPrefix'), '-gateway-AvailabilitySet')]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[concat(variables('vmPrefix'), '-gateway')]",
                    "adminUsername": "[parameters('vmUsername')]",
                    "adminPassword": "[parameters('vmPassword')]"
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('SafewalkGatewayVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/images', concat(variables('vmPrefix'), '-gateway-osImage'))]"
                    },
                    "osDisk": {
                        "name": "[concat(variables('vmPrefix'), '-gateway-os-vhd')]",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmPrefix'), '-gateway-NIC'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', concat(variables('vmPrefix'), '-gateway-AvailabilitySet'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('vmPrefix'), '-gateway/installcustomscript')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines/', concat(variables('vmPrefix'), '-server-0') )]",
                "[resourceId('Microsoft.Compute/virtualMachines/', concat(variables('vmPrefix'), '-gateway') )]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'configure_gateway_custom_script.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'set_root_password.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'gateway_whitelist_safewalk_server.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'gateway_upgrade.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_snmp.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_timezone.sh', parameters('_artifactsLocationSasToken'))]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('bash configure_gateway_custom_script.sh ''', replace(parameters('SafewalkGatewayRootPassword'),'''', '''\"''\"'''), ''' ', parameters('subnetLANAddressSpace'))]"
                }
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(variables('vmPrefix'), '-server-', copyIndex())]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces/', concat(variables('vmPrefix'), '-server-', copyIndex(), '-NIC') )]",
                "[resourceId('Microsoft.Compute/images/', concat(variables('vmPrefix'), '-server-osImage') )]",
                "[resourceId('Microsoft.Compute/availabilitySets/', concat(variables('vmPrefix'), '-AvailabilitySet') )]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('SafewalkServerVmSize')]"
                },
                "osProfile": {
                    "computerName": "[concat(variables('vmPrefix'), '-server-', copyIndex())]",
                    "adminUsername": "[parameters('vmUsername')]",
                    "adminPassword": "[parameters('vmPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/images', concat(variables('vmPrefix'), '-server-osImage'))]"
                    },
                    "osDisk": {
                        "name": "[concat(variables('vmPrefix'), '-server-os-', copyIndex(), '-vhd')]",
                        "createOption": "FromImage"
                    },
                    "dataDisks":[
                        {
                            "diskSizeGB": "[variables('sizeOfDataDiskInGBSafewalk')]",
                            "lun": 0,
                            "createOption": "Empty"
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmPrefix'), '-server-', copyIndex(), '-NIC'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', concat(variables('vmPrefix'), '-AvailabilitySet'))]"
                }
            },
            "copy": {
                "name": "safewalk-servers",
                "count": "[parameters('numberOfSafewalkInstances')]",
                "mode": "serial",
                "batchSize": 1
            },
            "resources":[
                {
                    "condition": "[equals(copyIndex(), 0)]",
                    "type": "Microsoft.Compute/virtualMachines/extensions",
                    "name": "[concat(variables('vmPrefix'), '-server-', copyIndex(), '/customscriptmaster')]",
                    "apiVersion": "2017-03-30",
                    "location": "[variables('location')]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines/', concat(variables('vmPrefix'), '-server-', copyIndex()) )]",
                        "[resourceId('Microsoft.Compute/virtualMachines/extensions', concat(variables('vmPrefix'), '-gateway') , 'installcustomscript')]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.0",
                        "autoUpgradeMinorVersion": true,
                        "settings":{
                            "fileUris": [
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'configure_safewalk_custom_script_master.sh', parameters('_artifactsLocationSasToken'))]",		
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'set_root_password.sh', parameters('_artifactsLocationSasToken'))]",	
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_create_gateway.sh', parameters('_artifactsLocationSasToken'))]",	
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_accept_subnet.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_create.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_make_partitions.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_renew_secrets.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_upgrade.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_iptables.sh', parameters('_artifactsLocationSasToken'))]",	
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_snmp.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_timezone.sh', parameters('_artifactsLocationSasToken'))]",	
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_set_admin_password.sh', parameters('_artifactsLocationSasToken'))]",	
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_accept_subnet.sh', parameters('_artifactsLocationSasToken'))]"
                            ]
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat('bash configure_safewalk_custom_script_master.sh ''', replace(parameters('SafewalkServerRootPassword'),'''', '''\"''\"'''), ''' ', parameters('SafewalkGatewayIP'), ' ', reference(concat('Microsoft.Network/publicIPAddresses/', variables('gatewayPublicIPName')), '2017-04-01').ipAddress, ' ''', replace(parameters('SafewalkGatewayRootPassword'),'''', '''\"''\"'''), ''' ', variables('firstLastIPComponent'), ' ', parameters('numberOfSafewalkInst [...]
                        }
                    }
                },
                {
                    "condition": "[greater(copyIndex(), 0)]",
                    "type": "Microsoft.Compute/virtualMachines/extensions",
                    "name": "[concat(variables('vmPrefix'), '-server-', copyIndex(), '/customscriptslave')]",
                    "apiVersion": "2017-03-30",
                    "location": "[variables('location')]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines/', concat(variables('vmPrefix'), '-server-', copyIndex()) )]",
                        "[resourceId('Microsoft.Compute/virtualMachines/extensions', concat(variables('vmPrefix'), '-gateway') , 'installcustomscript')]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.0",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'configure_safewalk_custom_script_slave.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'set_root_password.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_create_gateway.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_accept_subnet.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_join.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_make_partitions.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_renew_secrets.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_upgrade.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_iptables.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_snmp.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_timezone.sh', parameters('_artifactsLocationSasToken'))]"
                            ]
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat('bash configure_safewalk_custom_script_slave.sh ''', replace(parameters('SafewalkServerRootPassword'),'''', '''\"''\"'''), ''' ', variables('firstSafewalkServerIP'), ' ', reference(concat('Microsoft.Network/networkInterfaces/', concat(variables('vmPrefix'), '-server-', copyIndex(), '-NIC')), '2017-04-01').ipConfigurations[0].properties.privateIPAddress, ' ', parameters('subnetLANAddressSpace'))]"
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[concat(variables('vmPrefix'), '-AvailabilitySet')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "sku": {
                "name": "Aligned"
            },
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 3
            }
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[concat(variables('vmPrefix'), '-gateway-AvailabilitySet')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "sku": {
                "name": "Aligned"
            },
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 3
            }
        }
    ],
    "outputs": {
        "GatewayPublicIP" : {
            "type" : "string",
            "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('gatewayPublicIPName')), '2017-04-01').ipAddress]"
        },
        "GatewayPrivateIP" : {
            "type" : "string",
            "value": "[parameters('SafewalkGatewayIP')]"
        },
        "FirstSafewalkPrivateIP" : {
            "type" : "string",
            "value": "[variables('firstSafewalkServerIP')]"
        },
        "LastSafewalkPrivateIP" : {
            "type" : "string",
            "value": "[variables('lastSafewalkServerIP')]"
        }
    }
}
